exercício html 002 (cont.)
Símbolos especiais e Emojis

--- a/modulo-01/ex002/index.html
+++ b/modulo-01/ex002/index.html
@@ -17,7 +17,7 @@
         qualquer jeito.
         Basta colocar tudo
         no meio do par de tags
-        &lt;p&gt; e &lt;/p&gt;
+        &lt;p&gt; e &lt;/p&gt; <!--Less than / Greater than-->
     </p>
     <p>
         Se precisar quebrar
@@ -25,6 +25,27 @@
         específico <br> como esse,
         você pode usar a tag &lt;br&gt;.
     </p>
+    <p>Vamos adicionar alguns símbolos especiais:
+        &reg;
+        &copy;
+        &trade;
+        &euro;
+        &pound;
+        &dollar;
+        &yen;
+        &cent;
+        &delta;
+        &Delta;
+        &uparrow;
+    </p>
+
+    <p>
+        Vamos adicionar alguns emoji:
+        &#x1F596
+        &#X1F913
+        &#x1F308
+    </p>
+
 </body>
 
 </html>
