--- a/modulo-01/ex003/index.html
+++ b/modulo-01/ex003/index.html
@@ -4,11 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Inicial</title>
+    <title>Teste com Imagens</title>
 </head>
 
 <body>
     
+    <h1>Testando Carga e Imagens</h1>
+    <p>Abaixo você vai ver uma imagem que está na mesma pasta.</p>
+    <img src="imagens/logo-html.png" alt="Logo HTML5">
+    <p>Tanto a imagem de logo do html como a do css estão dentro de uma pasta chamada "imagens"</p>
+    <img src="imagens/logo-css.png" alt="Logo CSS">
+    <p>Também podemos carregar imagens externas
+    </p>
+    <img src="https://a.thumbs.redditmedia.com/zDOFJTXd6fmlD58VDGypiV94Leflz11woxmgbGY6p_4.png" alt="Logo JavaScript"> <!-- URL -->
 </body>
 
 </html>
