--- a/modulo-01/ex008/index.html
+++ b/modulo-01/ex008/index.html
@@ -25,8 +25,8 @@
     <p>Nesta frase, temos um <em>termo em ênfase</em> usando a tag &lt;em&gt; (semântica).</p>
     
     <h2>Texto marcado</h2>
-    <p>Podemos criar também um <mark>texto marcado</mark> usando a tag &lt;mark&gt;</p>
-    <p>E no outro parágrafo, temos <mark>outro texto marcado</mark> no final.</p>
+    <p>Podemos criar também um <mark style="background-color: rgb(82, 82, 189);">texto marcado</mark> usando a tag &lt;mark&gt;</p>
+    <p>E no outro parágrafo, temos <mark style="background-color: magenta;">outro texto marcado</mark> no final.</p>
 
     <h2>Texto grande e pequeno</h2>
     <p>Estamos criando um <big>texto grande</big> e um <small>texto pequeno</small> nesse parágrafo.</p>
@@ -44,6 +44,8 @@
     <h2>Texto subscrito</h2>
     <p>Para inserir coisas do tipo H<sub>2</sub>0</p>
 
+    <h2>Teste</h2>
+    <p>Este é um parágrafo de <strong>teste</strong> com a tag &lt;strong&gt;.</p>
 
 </body>
 
