--- a/modulo-01/ex009/index.html
+++ b/modulo-01/ex009/index.html
@@ -83,7 +83,7 @@
         <dt>CSS</dt>
         <dd>Linguagem de marcação para a criação do design de um site.</dd>
         <dt>Javascript</dt>
-        <dd>Linguagem de programação para a criaão de interatividade de um site.</dd>
+        <dd>Linguagem de programação para a criação de interatividade de um site.</dd>
     </dl>
 
 </body>
