exercício html css 019b
Usando o atributo "class" em CSS.

--- a/modulo-01/ex019/seletor01.html
+++ b/modulo-01/ex019/seletor01.html
@@ -13,18 +13,18 @@
 
     <h1 id="principal">Criando Sites com HTML e CSS</h1>
     <h1>Aprendendo HTML</h1>
-    <h2>HTML Básico</h2>
+    <h2 class="basico">HTML Básico</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur repudiandae voluptas ratione tempora minima, nihil ea ad sequi? Iure ipsam repellat quo fugiat natus culpa alias obcaecati commodi veritatis asperiores.</p>
-    <h2>HTML Intermediário</h2>
+    <h2 class="intermediario">HTML Intermediário</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur repudiandae voluptas ratione <span class="basico">tempora minima</span>, nihil ea ad sequi? Iure ipsam repellat quo fugiat natus culpa alias obcaecati commodi veritatis asperiores.</p>
+    <h2 class="avancado">HTML Avançado</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur repudiandae voluptas ratione tempora minima, nihil ea ad sequi? Iure ipsam repellat quo fugiat natus culpa alias obcaecati commodi veritatis asperiores.</p>
-    <h2>HTML Avançado</h2>
+    <h1 class="destaque">Aprendendo CSS</h1>
+    <h2 class="basico">CSS básico</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur repudiandae voluptas ratione tempora minima, nihil ea ad sequi? Iure ipsam repellat quo fugiat natus culpa alias obcaecati commodi veritatis asperiores.</p>
-    <h1>Aprendendo CSS</h1>
-    <h2>CSS básico</h2>
+    <h2 class="intermediario">CSS intermediário</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur repudiandae voluptas ratione tempora minima, nihil ea ad sequi? Iure ipsam repellat quo fugiat natus culpa alias obcaecati commodi veritatis asperiores.</p>
-    <h2>CSS intermediário</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur repudiandae voluptas ratione tempora minima, nihil ea ad sequi? Iure ipsam repellat quo fugiat natus culpa alias obcaecati commodi veritatis asperiores.</p>
-    <h2>CSS avançado</h2>
+    <h2 class="avancado destaque">CSS avançado</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur repudiandae voluptas ratione tempora minima, nihil ea ad sequi? Iure ipsam repellat quo fugiat natus culpa alias obcaecati commodi veritatis asperiores.</p>
 
 </body>
