exercício html css 020
Pseudo-elementos em CSS.

--- a/modulo-01/ex020/hover.html
+++ b/modulo-01/ex020/hover.html
@@ -13,7 +13,7 @@
 
         /* 
             sintaxe: div > p
-            Significa que o estilo vai ser aplicado ao <p> que estiver dentro de uma <div>.
+            Significa que o estilo vai ser aplicado ao <p> que for "children" (que estiver dentro) de uma <div>.
         */
 
         div > p{
