exercício html css 021c
Sombras em Modelos de Caixa e Bordas Arredondadas.

--- a/modulo-01/ex021/caixa02.html
+++ b/modulo-01/ex021/caixa02.html
@@ -17,12 +17,16 @@
             background-color: white;
             padding: 10px;
             margin: 10px;
+            border-radius: 10px 0px;
+            box-shadow: 3px 3px 9px 0px rgba(0, 0, 0, 0.329);
         }
 
         main{
             background-color: white;
             padding: 10px;
             margin: 10px;
+            border-radius: 10px 0px;
+            box-shadow: 3px 3px 9px 0px rgba(0, 0, 0, 0.329);
         }
 
         article{
@@ -38,13 +42,18 @@
             background-color: black;
             color: white;
             text-align: center;
-            padding: 1px;
+            padding: 4px;
+            margin: 0px;
+        }
+
+        footer > p{
             margin: 0px;
         }
 
         nav{
             background-color: rgb(100, 100, 100);
             padding: 3px;
+            box-shadow: 2px 2px 4px 1px rgba(0, 0, 0, 0.315);
         }
 
         nav > a{
@@ -56,6 +65,14 @@
 
         nav > a:hover {
             text-decoration: underline;
+        }
+
+        div#bola{
+            height: 100px;
+            width: 100px;
+            background-color: white;
+            margin: 10px auto 10px auto;
+            border-radius: 50%;
         }
 
     </style>
@@ -97,6 +114,8 @@
     <footer>
         <p>Desenvolvido por CursoEmVideo</p>
     </footer>
+
+    <div id="bola"></div>
 
 </body>
 
