--- a/modulo-01/des010/android.html
+++ b/modulo-01/des010/android.html
@@ -8,6 +8,7 @@
     <title>Como surgiu o mascote do Android?</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    
 </head>
 
 <body>
@@ -26,19 +27,19 @@
     <main>
 
         <h1>História do Mascote do Android</h1>
-        <p>Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas você sabia que o seu simpático mascote tem um nome e uma história muito curiosa? Não sabia? Pois agora você vai ficar sabendo. Acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
+        <p>Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo <strong>Google</strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas você sabia que o seu simpático mascote tem um nome e uma história muito curiosa? Não sabia? Pois agora você vai ficar sabendo. Acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
 
         <h2>A Primeira Versão</h2>
-        <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
-        <img src="imagens/dan-droids.png" alt="Dandroids">
-        <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.</p>
+        <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a target="_blank" rel="external" href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/">Dan Morrill</a>. Ele conta que abriu o <a target="_blank" rel="external" href="https://inkscape.org/pt-br/">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
+        <img id="dandroids" src="imagens/dan-droids.png" alt="Dandroids">
+        <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.</p>
         
         <h2>Surge um Novo Mascote</h2>
-        <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
-        <img src="imagens/irina-blok.jpg" alt="Irina Blok">
-        <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
+        <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora russa <a target="_blank" rel="external" href="https://www.irinablok.com/android">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+        <img id="irina" src="imagens/irina-blok.jpg" alt="Irina Blok">
+        <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.</p>
         <img src="imagens/bugdroid.png" alt="Bugdroid e boneco masculino de palitinho">
-        <p>A principal inspiração para os traços do novo Budgroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>        
+        <p>A principal inspiração para os traços do novo <strong>Budgroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>        
         <div id="videocontainer"><iframe width="1080px" height="630px" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
         <section>
@@ -46,30 +47,30 @@
                 <h2>Quer aprender mais?</h2>
                 <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
                 <ul type>
-                    <li><img src="imagens/tick-reduced.png" alt="tick"> 1.5 - <abbr title="Bolo de pote">Cupcake</abbr></li>
-                    <li><img src="imagens/tick-reduced.png" alt="tick"> 1.6 - <abbr title="Rosquinha">Donut</abbr></li>
-                    <li><img src="imagens/tick-reduced.png" alt="tick"> 3.0 - <abbr title="Bomba de chocolate">Eclair</abbr></li>
-                    <li><img src="imagens/tick-reduced.png" alt="tick"> 2.2 - <abbr title="Iogurte congelado">Froyo</abbr></li>
-                    <li><img src="imagens/tick-reduced.png" alt="tick"> 2.3 - <abbr title="Pão de mel">Gingerbread</abbr></li>
-                    <li><img src="imagens/tick-reduced.png" alt="tick"> 3.0 - <abbr title="Caramelo de favo de mel">Honeycomb</abbr></li>
-                    <li><img src="imagens/tick-reduced.png" alt="tick"> 4.0 - <abbr title="Sanduíche de sorvete">Ice Cream Sandwich</abbr></li>
+                    <li>1.5 - <abbr title="Bolo de pote">Cupcake</abbr>
+                    <li>1.6 - <abbr title="Rosquinha">Donut</abbr>
+                    <li>3.0 - <abbr title="Bomba de chocolate">Eclair</abbr>
+                    <li>2.2 - <abbr title="Iogurte congelado">Froyo</abbr>
+                    <li>2.3 - <abbr title="Pão de mel">Gingerbread</abbr>
+                    <li>3.0 - <abbr title="Caramelo de favo de mel">Honeycomb</abbr>
+                    <li>4.0 - <abbr title="Sanduíche de sorvete">Ice Cream Sandwich</abbr>
                 </ul>
                 <ul>
-                    <li><img src="imagens/tick-reduced.png" alt="tick"> 4.1 - <abbr title="Jujuba">Jelly Bean</abbr></li>
-                    <li><img src="imagens/tick-reduced.png" alt="tick"> 4.4 - <abbr title="KitKat">KitKat</abbr></li>
-                    <li><img src="imagens/tick-reduced.png" alt="tick"> 5.0 - <abbr title="Pirulito">Lolipop</abbr></li>
-                    <li><img src="imagens/tick-reduced.png" alt="tick"> 6.0 - <abbr title="Marshmallow">Marshmallow</abbr></li>
-                    <li><img src="imagens/tick-reduced.png" alt="tick"> 7.0 - <abbr title="Nogado">Nougat</abbr></li>
-                    <li><img src="imagens/tick-reduced.png" alt="tick"> 8.0 - <abbr title="Oreo">Oreo</abbr></li>
-                    <li><img src="imagens/tick-reduced.png" alt="tick"> 9.0 - <abbr title="Torta">Pie</abbr></li>
+                    <li>4.1 - <abbr title="Jujuba">Jelly Bean</abbr>
+                    <li>4.4 - <abbr title="KitKat">KitKat</abbr>
+                    <li>5.0 - <abbr title="Pirulito">Lolipop</abbr>
+                    <li>6.0 - <abbr title="Marshmallow">Marshmallow</abbr>
+                    <li>7.0 - <abbr title="Nogado">Nougat</abbr>
+                    <li>8.0 - <abbr title="Oreo">Oreo</abbr>
+                    <li>9.0 - <abbr title="Torta">Pie</abbr>
                 </ul>
-                <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
-                <p>Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma touxe para o sistema Android.</p>
+                <p>Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao <strong>Android 10</strong>.</p>
+                <p>Acesse aqui o site <a target="_blank" rel="external" href="https://www.android.com/intl/en_nz/history/">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma touxe para o sistema Android.</p>
 
 
 
             </article>
-            <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
+            <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <strong>Android</strong> e seu simpático mascote.</p>
         </section>
 
     </main>
